# gso

./: Anchor.toml  README.md  package.json  tsconfig.json
.github/workflows/: ci-anchor.yml  ci-soteria.yml
programs/gso/: Cargo.toml
programs/gso/src/: common.rs  errors.rs  lib.rs
programs/gso/src/instructions/: config.rs  config_v2.rs  mod.rs  name_tokens.rs  stake.rs  unstake.rs  withdraw.rs
tests/: gso.ts
tests/utils/: utils.ts
